--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,7 +4,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
-    <dimen name="text_size_micro">12sp</dimen>
+    <dimen name="text_size_nano">8sp</dimen>
+    <dimen name="text_size_micro">11sp</dimen>
     <dimen name="text_size_min">6sp</dimen>
     <dimen name="text_size_small">14sp</dimen>
     <dimen name="text_size_questions">16sp</dimen>
@@ -35,5 +36,6 @@
     <dimen name="button_height_normal">40dp</dimen>
     <dimen name="button_height_short">32dp</dimen>
     <dimen name="button_height_micro">25dp</dimen>
+    <dimen name="circle_image_size">29dp</dimen>
 
 </resources>
