--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,8 @@
 
     <color name="black_overlay">#66000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="gray_bg">#f5f5f5</color>
+    <color name="orange">#ff7043</color>
+    <color name="orange_dark">#fd6132</color>
+    <color name="gray_light">#e0e0e0</color>
 </resources>
