--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,7 +5,7 @@
     <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="text_size_nano">8sp</dimen>
-    <dimen name="text_size_micro">11sp</dimen>
+    <dimen name="text_size_micro">12sp</dimen>
     <dimen name="text_size_min">6sp</dimen>
     <dimen name="text_size_small">14sp</dimen>
     <dimen name="text_size_questions">16sp</dimen>
@@ -35,7 +35,9 @@
     <dimen name="button_height_medium">50dp</dimen>
     <dimen name="button_height_normal">40dp</dimen>
     <dimen name="button_height_short">32dp</dimen>
-    <dimen name="button_height_micro">25dp</dimen>
+    <dimen name="button_height_micro">26dp</dimen>
     <dimen name="circle_image_size">29dp</dimen>
+    <dimen name="size_profile_ava">85dp</dimen>
+    <dimen name="size_add_profile_photo">20dp</dimen>
 
 </resources>
