--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -58,7 +58,8 @@
         android:layout_below="@+id/tv_profile_user_name"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/spacing_small"
-        android:background="@drawable/selector_orange">
+        android:background="@drawable/selector_orange"
+        android:elevation="3dp">
 
         <ImageView
             android:id="@+id/camera"
@@ -82,11 +83,35 @@
     </RelativeLayout>
 
     <View
+        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_below="@+id/btn_add_funone"
         android:layout_marginTop="@dimen/spacing_large"
         android:background="@color/gray_light" />
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabs"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/button_height_normal"
+        android:layout_below="@+id/divider"
+        app:tabGravity="fill"
+        app:tabMode="fixed" />
+
+    <View
+        android:id="@+id/bottom_divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/tabs"
+        android:background="@color/gray_light" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/bottom_divider"
+        android:layout_marginTop="@dimen/spacing_small"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 
 </RelativeLayout>
