--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="yellow">#ffd740</color>
     <color name="black">#000000</color>
+    <color name="hint_gray">#9e9e9e</color>
 
     <drawable name="com_facebook_blue">#3B5998</drawable>
     <drawable name="com_facebook_blue_pressed">#2f487c</drawable>
