--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,5 @@
     <color name="orange">#ff7043</color>
     <color name="orange_dark">#fd6132</color>
     <color name="gray_light">#e0e0e0</color>
+    <color name="gray_dark">#dedede</color>
 </resources>
