--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="yellow">#ffd740</color>
     <color name="black">#000000</color>
     <color name="hint_gray">#9e9e9e</color>
+    <color name="divider_color">#E1E1E1</color>
 
     <drawable name="com_facebook_blue">#3B5998</drawable>
     <drawable name="com_facebook_blue_pressed">#2f487c</drawable>
