--- a/app/src/main/res/layout/fragment_liked_posts.xml
+++ b/app/src/main/res/layout/fragment_liked_posts.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.www.funone.fragments.LinkedPostsFragment">
-
+    tools:context=".fragments.LikedPostsFragment">
     <RelativeLayout
         android:id="@+id/rl_no_data"
         android:layout_width="wrap_content"
@@ -16,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:src="@drawable/group" />
+            android:src="@drawable/liked" />
 
         <com.www.funone.view.TextViewFont
             android:layout_width="wrap_content"
@@ -24,7 +23,7 @@
             android:layout_below="@+id/group"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/spacing_20"
-            android:text="@string/linked_profile_empty"
+            android:text="@string/liked_profile_empty"
             android:textSize="@dimen/text_size_questions"
             app:custom_font="RobotoRegular" />
 
