--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -12,7 +12,7 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="46dp"
+            android:layout_height="@dimen/item_hash_tag_height"
             android:padding="@dimen/spacing_normal"
             android:text="@string/popular_hash_tag"
             android:textColor="@color/black" />
