--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -42,5 +42,7 @@
 
 
     <dimen name="tool_bar_size">112dp</dimen>
+    <dimen name="item_hash_tag_height">46dp</dimen>
+    <dimen name="hash_tag_width">56dp</dimen>
 
 </resources>
