ADD: adapter with list

--- a/app/src/main/res/layout/fragment_my_posts.xml
+++ b/app/src/main/res/layout/fragment_my_posts.xml
@@ -30,5 +30,12 @@
 
     </RelativeLayout>
 
+    <ListView
+        android:id="@+id/lv_my_posts"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@null"
+        android:dividerHeight="0dp"/>
+
 
 </RelativeLayout>
