--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,5 @@
     <color name="orange_dark">#fd6132</color>
     <color name="gray_light">#e0e0e0</color>
     <color name="gray_dark">#dedede</color>
+    <color name="blue">#0d47a1</color>
 </resources>
