--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -43,7 +43,7 @@
 
 
     <dimen name="tool_bar_size">112dp</dimen>
-    <dimen name="item_hash_tag_height">46dp</dimen>
+    <dimen name="item_hash_tag_header_height">46dp</dimen>
     <dimen name="hash_tag_width">56dp</dimen>
 
 </resources>
