--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -51,6 +51,7 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/rel_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/spacing_large"
