--- a/app/src/main/res/layout/activity_all_comment.xml
+++ b/app/src/main/res/layout/activity_all_comment.xml
@@ -28,13 +28,11 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <ListView
-            android:id="@+id/lv_all_comments"
+        <FrameLayout
+            android:id="@+id/content_comments"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/app_bar"
-            android:divider="@null"
-            android:dividerHeight="0dp" />
+            android:layout_below="@+id/app_bar" />
 
     </RelativeLayout>
 
