--- a/app/src/main/res/layout/item_all_comments.xml
+++ b/app/src/main/res/layout/item_all_comments.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingTop="@dimen/spacing_small"
     android:paddingBottom="@dimen/spacing_small"
@@ -23,7 +23,7 @@
         android:layout_toRightOf="@+id/img_user"
         android:ellipsize="end"
         android:singleLine="true"
-        android:text="sdgsdfsdgsdgsdgagd"
+        android:text="Mae Copeland"
         android:textColor="@color/black"
         android:textSize="@dimen/text_size_micro"
         app:custom_font="RobotoRegular" />
@@ -37,7 +37,7 @@
         android:ellipsize="end"
         android:singleLine="true"
         android:text="sdgsdfsdgsdgsdgagd"
-        android:textColor="@color/black"
+        android:textColor="@color/hint_gray"
         android:textSize="@dimen/text_size_micro"
         app:custom_font="RobotoRegular" />
 
@@ -46,6 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
         android:layout_marginRight="@dimen/spacing_normal"
         android:text="1h"
         android:textColor="@color/black"
