--- a/app/src/main/res/layout/fragment_comments.xml
+++ b/app/src/main/res/layout/fragment_comments.xml
@@ -9,6 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@null"
+        android:drawSelectorOnTop="true"
+        android:background="@color/white"
         android:dividerHeight="0dp" />
 
 </RelativeLayout>
